fixed footer margin on mobile

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -8,6 +8,7 @@
   height: $xl-size;
   width: 100%;
   padding-bottom: 8rem;
+  margin-top: 10rem;
   @media (min-width: $desktop-breakpoint) {
     align-items: center;
     flex-direction: row;
